# earth-2064

./: .gitignore  pyproject.toml  readme.md  start.sh  tcpser.sh  vice.sh
docs/: earthlike-rules.md
earch2064/: __init__.py  core.py  db.py  server.py  web.py
earth2064/: __init__.py  core.py  db.py  server.py  web.py
tests/: __init__.py  test_core.py  test_db.py  test_terminal.py
