[project]
name = "earth2064"
version = "0.1.0"
description = "Local server prototype for the Earth 2064 strategy game."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
earth2064 = "earth2064.server:main"
earch2064 = "earth2064.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
